@@ -2,6 +2,7 @@ Revision history for Graphics-Primitive
 
 0.11
   - Small optimizations
+  - Driver: add reset
 
 0.10
   - Path: add rectangle
